add auther and publish date

--- a/app-tirads-calc.qmd
+++ b/app-tirads-calc.qmd
@@ -1,5 +1,7 @@
 ---
 title: "TIRADS Calculator"
+author: "Kittipos Sirivongrungson"
+date: "`r Sys.Date()`"
 format: html
 server: shiny
 theme: flatly
