--- a/references.bib
+++ b/references.bib
@@ -12,3 +12,9 @@
   pages        = {587–595},
   language     = {eng}
 }
+
+@misc{RadAssist,
+  title = {The Radiology Assistant : TI-RADS - Thyroid Imaging Reporting and Data System},
+  author = {Habib Ahmad, Aad van der Lugt},
+  url   = {https://radiologyassistant.nl/head-neck/ti-rads/ti-rads}
+}
