add TIRADS Lexicon Ref

--- a/references.bib
+++ b/references.bib
@@ -13,8 +13,24 @@
   language     = {eng}
 }
 
+ @article{ACR-TIRADS-Lexicon,
+  title        = {Thyroid Ultrasound Reporting Lexicon: White Paper of the ACR Thyroid Imaging, Reporting and Data System (TIRADS) Committee},
+  volume       = {12},
+  issn         = {1558-349X},
+  doi          = {10.1016/j.jacr.2015.07.011},
+  abstractnote = {Ultrasound is the most commonly used imaging technique for the evaluation of thyroid nodules. Sonographic findings are often not specific, and definitive diagnosis is usually made through fine-needle aspiration biopsy or even surgery. In reviewing the literature, terms used to describe nodules are often poorly defined and inconsistently applied. Several authors have recently described a standardized risk stratification system called the Thyroid Imaging, Reporting and Data System (TIRADS), modeled on the BI-RADS system for breast imaging. However, most of these TIRADS classifications have come from individual institutions, and none has been widely adopted in the United States. Under the auspices of the ACR, a committee was organized to develop TIRADS. The eventual goal is to provide practitioners with evidence-based recommendations for the management of thyroid nodules on the basis of a set of well-defined sonographic features or terms that can be applied to every lesion. Terms were chosen on the basis of demonstration of consistency with regard to performance in the diagnosis of thyroid cancer or, conversely, classifying a nodule as benign and avoiding follow-up. The initial portion of this project was aimed at standardizing the diagnostic approach to thyroid nodules with regard to terminology through the development of a lexicon. This white paper describes the consensus process and the resultant lexicon.},
+  number       = {12 Pt A},
+  journal      = {Journal of the American College of Radiology: JACR},
+  author       = {Grant, Edward G. and Tessler, Franklin N. and Hoang, Jenny K. and Langer, Jill E. and Beland, Michael D. and Berland, Lincoln L. and Cronan, John J. and Desser, Terry S. and Frates, Mary C. and Hamper, Ulrike M. and Middleton, William D. and Reading, Carl C. and Scoutt, Leslie M. and Stavros, A. Thomas and Teefey, Sharlene A.},
+  year         = {2015},
+  month        = {Dec},
+  pages        = {1272–1279},
+  language     = {eng}
+}
+
+
 @misc{RadAssist,
-  title = {The Radiology Assistant : TI-RADS - Thyroid Imaging Reporting and Data System},
+  title  = {The Radiology Assistant : TI-RADS - Thyroid Imaging Reporting and Data System},
   author = {Habib Ahmad, Aad van der Lugt},
-  url   = {https://radiologyassistant.nl/head-neck/ti-rads/ti-rads}
+  url    = {https://radiologyassistant.nl/head-neck/ti-rads/ti-rads}
 }
