--- a/app-tirads-calc.qmd
+++ b/app-tirads-calc.qmd
@@ -12,6 +12,7 @@ format:
       source: https://github.com/Lightbridge-KS/tirads-calc
 server: shiny
 bibliography: references.bib
+csl: elsevier-with-titles.csl
 ---
 
 ```{r setup, include=FALSE}
@@ -84,7 +85,9 @@ radioButtons("composition", tags$b("Composition"),
 
 #### 🏞
 
-![Composition [@RadAssist]](./images/composition.png){#fig-composition width="80%"}
+![**Composition** [@RadAssist]](./images/composition.png){#fig-composition width="80%"}
+
+- **Spongiform:** aggregation of multiple microcystic components ≥ 50% of the volume of the nodule [@ACR-TIRADS-Lexicon].
 
 :::
 
