--- a/references.bib
+++ b/references.bib
@@ -30,7 +30,14 @@
 
 
 @misc{RadAssist,
-  title  = {The Radiology Assistant : TI-RADS - Thyroid Imaging Reporting and Data System},
+  title  = {The Radiology Assistant: TI-RADS - Thyroid Imaging Reporting and Data System},
   author = {Habib Ahmad, Aad van der Lugt},
   url    = {https://radiologyassistant.nl/head-neck/ti-rads/ti-rads}
+}
+
+@misc{RadKey-ThyroidCyst,
+  title        = {Radiology Key: Thyroid Cysts},
+  author       = {Zdeněk Fryšák},
+  url          = {https://radiologykey.com/thyroid-cysts},
+  year         = {2017}
 }
