--- a/references.bib
+++ b/references.bib
@@ -28,6 +28,22 @@
   language     = {eng}
 }
 
+@article{ACR-TIRADS-UserGuide,
+  title        = {Thyroid Imaging Reporting and Data System (TI-RADS): A User’s Guide},
+  volume       = {287},
+  issn         = {1527-1315},
+  doi          = {10.1148/radiol.2017171240},
+  abstractnote = {In 2017, the Thyroid Imaging Reporting and Data System (TI-RADS) Committee of the American College of Radiology (ACR) published a white paper that presented a new risk-stratification system for classifying thyroid nodules on the basis of their appearance at ultrasonography (US). In ACR TI-RADS, points in five feature categories are summed to determine a risk level from TR1 to TR5. Recommendations for biopsy or US follow-up are based on the nodule’s ACR TI-RADS level and its maximum diameter. The purpose of this article is to offer practical guidance on how to implement and apply ACR TI-RADS based on the authors’ experience with the system. © RSNA, 2018.},
+  number       = {1},
+  journal      = {Radiology},
+  author       = {Tessler, Franklin N. and Middleton, William D. and Grant, Edward G.},
+  year         = {2018},
+  month        = {Apr},
+  pages        = {29–36},
+  language     = {eng}
+}
+
+
 
 @misc{RadAssist,
   title  = {The Radiology Assistant: TI-RADS - Thyroid Imaging Reporting and Data System},
@@ -36,8 +52,8 @@
 }
 
 @misc{RadKey-ThyroidCyst,
-  title        = {Radiology Key: Thyroid Cysts},
-  author       = {Zdeněk Fryšák},
-  url          = {https://radiologykey.com/thyroid-cysts},
-  year         = {2017}
+  title  = {Radiology Key: Thyroid Cysts},
+  author = {Zdeněk Fryšák},
+  url    = {https://radiologykey.com/thyroid-cysts},
+  year   = {2017}
 }
